--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.20.0",
+    "axios": "^0.26.1",
     "date-fns": "^2.16.1",
     "dexie": "^3.0.2",
     "dotenv": "^8.2.0",
@@ -18,7 +18,7 @@
     "lodash": "^4.17.20",
     "lodash.throttle": "^4.1.1",
     "node-fetch": "^2.6.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^7.0.1",
     "postcss": "^8.1.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -27,7 +27,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^5.0.0",
     "react-spring": "^8.0.27",
     "react-text-truncate": "^0.16.0",
     "redux": "^4.0.5",
@@ -70,6 +70,7 @@
     "@imaginary-cloud/eslint-config-react": "^1.0.1",
     "@imaginary-cloud/prettier-config": "^1.0.0",
     "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
@@ -80,6 +81,6 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "postcss-cli": "^7.1.1",
     "prettier": "^2.1.2",
-    "tailwindcss": "^1.7.6"
+    "tailwindcss": "^3.0.23"
   }
 }
